--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
