--- a/front2/package.json
+++ b/front2/package.json
@@ -12,9 +12,19 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
+    "faker": "^4.1.0",
+    "immer": "^7.0.4",
     "next": "latest",
+    "next-redux-saga": "^4.1.2",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
