--- a/front3/package.json
+++ b/front3/package.json
@@ -22,9 +22,9 @@
     "next": "^9.4.4",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
+    "quill": "^1.3.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
