--- a/front3/package.json
+++ b/front3/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "faker": "^4.1.0",
+    "highlight.js": "^10.1.1",
     "immer": "^7.0.4",
     "next": "^9.4.4",
     "next-redux-saga": "^4.1.2",
