--- a/front3/package.json
+++ b/front3/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production next start -p 4000"
   },
   "author": "",
   "license": "ISC",
@@ -16,12 +15,13 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@next/bundle-analyzer": "^9.4.4",
     "axios": "^0.19.2",
+    "cross-env": "^7.0.2",
     "faker": "^4.1.0",
     "highlight.js": "^10.1.1",
     "immer": "^7.0.4",
     "next": "^9.4.4",
-    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
     "quill": "^1.3.7",
     "react": "^16.13.1",
