--- a/front3/package.json
+++ b/front3/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "socket.io-client": "^2.3.0"
   }
 }
