--- a/back/package.json
+++ b/back/package.json
@@ -22,8 +22,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.2.3",
-    "sequelize-cli": "^6.1.0",
-    "socket.io": "^2.3.0"
+    "sequelize-cli": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
